dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
       - name: rails-hello
         image: <IMAGE>
         ports:
          - containerPort: 80
