dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-test
spec:
  selector:
    app: test
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 3000
